@@ -8,6 +8,7 @@ Date=2014-11-28T11:14:00
 Comments= <<EOT
 - Re-write to use GraphViz2::Marpa V 2.01.
 - Switch from Hash::FieldHash to Moo.
+- Add data/path.set.01.gv, as a demo of cluster processing.
 EOT
 
 [V 1.05]
