@@ -2,46 +2,34 @@ Build.PL
 Changelog.ini
 Changes
 config/.htgraphviz2.marpa.pathutils.conf
-data/01.clusters.in.csv
 data/01.clusters.in.gv
 data/01.clusters.out.gv
-data/01.fixed.paths.in.csv
 data/01.fixed.paths.in.gv
 data/01.fixed.paths.out.gv
-data/02.clusters.in.csv
 data/02.clusters.in.gv
 data/02.clusters.out.gv
-data/02.fixed.paths.in.csv
 data/02.fixed.paths.in.gv
 data/02.fixed.paths.out.gv
-data/03.clusters.in.csv
 data/03.clusters.in.gv
 data/03.clusters.out.gv
-data/03.fixed.paths.in.csv
 data/03.fixed.paths.in.gv
 data/03.fixed.paths.out.gv
-data/04.clusters.in.csv
 data/04.clusters.in.gv
 data/04.clusters.out.gv
-data/05.clusters.in.csv
 data/05.clusters.in.gv
 data/05.clusters.out.gv
-data/06.clusters.in.csv
 data/06.clusters.in.gv
 data/06.clusters.out.gv
-data/07.clusters.in.csv
 data/07.clusters.in.gv
 data/07.clusters.out.gv
-data/08.clusters.in.csv
 data/08.clusters.in.gv
 data/08.clusters.out.gv
-data/code.attributes.csv
+data/path.set.01.gv
 htdocs/assets/css/graphviz2/marpa/pathutils/default.css
 htdocs/assets/css/graphviz2/marpa/pathutils/fancy.table.css
 htdocs/assets/css/graphviz2/marpa/pathutils/web.page.css
 htdocs/assets/templates/graphviz2/marpa/pathutils/basic.column.tx
 htdocs/assets/templates/graphviz2/marpa/pathutils/basic.table.tx
-htdocs/assets/templates/graphviz2/marpa/pathutils/code.attributes.tx
 htdocs/assets/templates/graphviz2/marpa/pathutils/fancy.table.tx
 htdocs/assets/templates/graphviz2/marpa/pathutils/pathutils.report.tx
 html/01.clusters.in.svg
@@ -66,8 +54,9 @@ html/07.clusters.in.svg
 html/07.clusters.out.svg
 html/08.clusters.in.svg
 html/08.clusters.out.svg
-html/code.attributes.html
 html/index.html
+html/path.set.01.new.svg
+html/path.set.01.svg
 lib/GraphViz2/Marpa/PathUtils.pm
 lib/GraphViz2/Marpa/PathUtils/Config.pm
 lib/GraphViz2/Marpa/PathUtils/Utils.pm
@@ -75,8 +64,8 @@ Makefile.PL
 MANIFEST			This list of files
 META.json
 META.yml
+path.set.01.gv
 README
-scripts/code.attributes2html.pl
 scripts/copy.config.pl
 scripts/find.clusters.pl
 scripts/find.clusters.sh
