@@ -1,42 +1,0 @@
-<html>
-<head>
-	<title><: $title :></title>
-	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-	<meta http-equiv="cache-control" content="no-cache">
-	<meta http-equiv="pragma" content="no-cache">
-	<link rel="stylesheet" type="text/css" href="<: $default_css :>">
-	<link rel="stylesheet" type="text/css" href="<: $fancy_table_css :>">
-</head>
-<body>
-
-<h1 align="center">Module and Script Attributes for <a href="http://metacpan.org/release/GraphViz2-Marpa-PathUtils">GraphViz2::Marpa::PathUtils</a> V <: $version :></h1>
-
-<p align="center">This documents the list of command line options and object attributes shared by the modules
-and scripts in this package.</p>
-
-<p align="center">The table is built by code in GraphViz2::Marpa::PathUtils::Utils, which scans the source code of the modules
-and scripts, looking for attribute declarations.</p>
-
-: include "basic.table.tx" { row => $row };
-
-<hr />
-
-<h3 class="global_toc_text">Links</h3>
-
-<h2 align="center">Index page for <a href="http://savage.net.au/Graph-module-demos.html">all graph module demos</a></h2>
-
-<h2 align="center">Demo page for <a href="http://savage.net.au/Perl-modules/html/graphviz2.pathutils/index.html">GraphViz2::Marpa::PathUtils</a></h2>
-
-<p align="center">Note: Since GraphViz2::Marpa::PathUtils is a sub-class of GraphViz2::Marpa, various attributes and methods will be
-found in the corresponding code attributes page for the latter module.</p>
-
-<hr />
-
-<h3 class="global_toc_text">Environment</h3>
-
-: include "fancy.table.tx" { data => $environment };
-
-<hr />
-
-</body>
-</html>
