@@ -12,8 +12,6 @@
 <body>
 	<h1 align="center">Index of sample files created with <a href="http://metacpan.org/release/GraphViz2-Marpa-PathUtils">GraphViz2::Marpa::PathUtils</a> V <: $version :>.</h1>
 
-	<p align="center">This module only works with L<GraphViz2::Marpa> versions less than 2.00.</p>
-
 	<p align="center">All scripts, input files and output files required to generate these examples are shipped in the GraphViz2::Marpa::PathUtils distro.</p>
 
 <hr />
@@ -33,8 +31,6 @@
 <h3 class="global_toc_text">Links</h3>
 
 <h2 align="center">Index page for <a href="http://savage.net.au/Graphviz.html">all graph module demos</a></h2>
-
-<h2 align="center"><a href="http://savage.net.au/Perl-modules/html/graphviz2.pathutils/code.attributes.html">Module and Script Attributes</a></h2>
 
 <hr />
 
